spec updates and more
