# api_spec.yaml
@@ -90,18 +90,17 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /api/v1/users/{user_id}:
+  /api/v1/users/{username}:
     get:
       operationId: getUser
       description: Gets a user with the user_id provided in the url.
       parameters:
-        - name: user_id
+        - name: username
           in: path
           required: true
-          description: The user_id of the user of the user.
+          description: The username of the user to get.
           schema:
-            type: integer
-            format: int32
+            type: string
       responses:
         200:
           description: The user that matches the provided user_id.
@@ -283,7 +282,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Friend'
+                  $ref: '#/components/schemas/Event'
         500:
           description: An internal server error has occured.
           content:
@@ -411,13 +410,14 @@ paths:
             format: int32
       requestBody:
         required: true
+        description: The player update.
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/PlayerStatus'
+              $ref: '#/components/schemas/Player'
       responses:
         200:
-          description: The player has been successfully updated
+          $ref: '#/components/schemas/UpdatePlayerResponse'
         500:
           description: An internal server error has occured.
           content:
@@ -499,6 +499,15 @@ paths:
                 $ref: '#/components/schemas/Error'
 
 components:
+  securitySchemes:
+    jwtAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+
+  responses:
+    UpdatePlayerResponse:
+      description: The player has been updated.
   schemas:
     CreateEventRequest:
       description: A create event request.
@@ -527,6 +536,25 @@ components:
         event_id:
           type: integer
           format: int32
+
+    CreateTeamRequest:
+      description: The request required to create a team
+      type: object
+      required:
+        - event_id
+        - name
+        - players
+      properties:
+        event_id:
+          type: integer
+          format: int32
+        name:
+          type: string
+        players:
+          type: array
+          items:
+            type: integer
+            format: int32
 
     Error:
       description: An error has occurred.
@@ -626,13 +654,16 @@ components:
       description: The user that is a part of an event.
       type: object
       required:
-        - event_player_id
+        - player_id
         - event_id
         - user_id
+        - username
+        - avatar
+        - taunt
         - status
         - created_at
       properties:
-        event_player_id:
+        player_id:
           type: integer
           format: int32
         event_id:
@@ -641,6 +672,14 @@ components:
         user_id:
           type: integer
           format: int32
+        username:
+          type: string
+        avatar:
+          type: string
+          nullable: true
+        taunt:
+          type: string
+          nullable: true
         status:
           $ref: '#/components/schemas/PlayerStatus'
 
